cleaner table formatting, avoid awkward break in table

--- a/_includes/default.css
+++ b/_includes/default.css
@@ -49,7 +49,10 @@ table {
 }
 
 td, th {
-  padding: 0.1em 0.2em;
+  padding: 0.1em 0.75em;
+}
+tr:nth-child(even) {
+  background: rgba(0, 0, 0, 5%);
 }
 thead {
   border-bottom: 1px solid grey;
@@ -224,8 +227,8 @@ figcaption {
 .highlight pre {
   background: transparent;
 }
-
 .gutter {
+  padding: 0;
   border: solid #ccc;
   border-width: 0 1px 0 0;
   color: #ccc;
@@ -236,6 +239,7 @@ figcaption {
 }
 .highlight td.code {
   overflow-x: auto;
+  padding: 0;
   padding-left: 0.5em;
 }
 
